---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2021-07-21
  Changes:
    - Minor refactor
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2021-07-21
  Changes:
    - Both foundry items are more expensive
    - Both foundry entities use more energy: burner doubled, electric quadrupled
  Features:
    - Setting to enable other "assembling machine" entities to do foundry tasks.
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2021-07-19
  Features:
    - Krastorio2 compatibility
    - Space Exploration/AAI compatibility
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2021-07-18
  Features:
    - Thumbnail
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2021-07-17
  Features:
    - New foundry building, coke (optional), updated recipes