@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.5
-Date: 2021-07-21
+Date: 2021-08-20
   Changes:
     - Minor refactor
+    - Fix production deadlock with bio industries + silicon
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2021-07-21
